--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "query-string": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.8",
