--- a/package.json
+++ b/package.json
@@ -12,12 +12,9 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.17",
     "@mui/x-date-pickers": "^6.19.6",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.86",
-    "@types/react": "^18.2.61",
-    "@types/react-dom": "^18.2.19",
     "dayjs": "^1.11.10",
     "jwt-decode": "^4.0.0",
     "query-string": "^9.0.0",
@@ -57,6 +54,16 @@
     ]
   },
   "devDependencies": {
-    "@types/uuid": "^9.0.8"
+    "@babel/preset-env": "^7.24.5",
+    "@testing-library/react": "^15.0.7",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
+    "@types/uuid": "^9.0.8",
+    "babel-jest": "^29.7.0"
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "node_modules/(?!(query-string|decode-uri-component|split-on-first|filter-obj)/)"
+    ]
   }
 }
